# TELEMETRY

./: .gitignore  CODE_EXPLANATION.md
.github/workflows/: build.yml  ci.yml  lvgl-sim.yml  unit-tests.yml
FIRST_TEST/: CMakeLists.txt  build_all.sh  sdkconfig.defaults
FIRST_TEST/components/display/: CMakeLists.txt  display_init.c
FIRST_TEST/components/display/include/: display_config.h  display_init.h
FIRST_TEST/components/ui/: CMakeLists.txt  ui_init.c
FIRST_TEST/components/ui/include/: ui_init.h
FIRST_TEST/main/: CMakeLists.txt  idf_component.yml  main.c
ReceiveTest/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
ReceiveTest/components/display/: CMakeLists.txt  display_init.c
ReceiveTest/components/display/include/: display_config.h  display_init.h
ReceiveTest/components/network/: CMakeLists.txt  network.c  network_utils.c
ReceiveTest/components/network/include/: network.h  network_utils.h
ReceiveTest/components/ui/: CMakeLists.txt  ui.c
ReceiveTest/components/ui/include/: ui.h
ReceiveTest/main/: CMakeLists.txt  idf_component.yml  main.c
ReceiveTest/python_sender/: sender.py
SCREEN_TEST/SCREEN_TEST/: CMakeLists.txt
SCREEN_TEST/SCREEN_TEST/main/: idf_component.yml
host-tests/: CMakeLists.txt  test_network_utils.c
